crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_f32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: f32, b: f32) -> f32 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: f32, b: f32) -> f32 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: f32, b: f32) -> f32 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: f32, b: f32) -> f32 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: f32, b: f32) -> f32 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: f32, b: f32) -> f32 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define float @assign(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  store float %b2, ptr %a, align 4
  %a3 = load float, ptr %a, align 4
  ret float %a3
}

define float @assign_add(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %add = fadd float %a1, %b2
  store float %add, ptr %a, align 4
  %a3 = load float, ptr %a, align 4
  ret float %a3
}

define float @assign_subtract(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %sub = fsub float %a1, %b2
  store float %sub, ptr %a, align 4
  %a3 = load float, ptr %a, align 4
  ret float %a3
}

define float @assign_multiply(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %mul = fmul float %a1, %b2
  store float %mul, ptr %a, align 4
  %a3 = load float, ptr %a, align 4
  ret float %a3
}

define float @assign_divide(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %div = fdiv float %a1, %b2
  store float %div, ptr %a, align 4
  %a3 = load float, ptr %a, align 4
  ret float %a3
}

define float @assign_remainder(float %0, float %1) {
body:
  %b = alloca float, align 4
  store float %1, ptr %b, align 4
  %a = alloca float, align 4
  store float %0, ptr %a, align 4
  %a1 = load float, ptr %a, align 4
  %b2 = load float, ptr %b, align 4
  %rem = frem float %a1, %b2
  store float %rem, ptr %a, align 4
  %a3 = load float, ptr %a, align 4
  ret float %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
