crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_f64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: f64, b: f64) -> f64 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: f64, b: f64) -> f64 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: f64, b: f64) -> f64 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: f64, b: f64) -> f64 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: f64, b: f64) -> f64 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: f64, b: f64) -> f64 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define double @assign(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  store double %b2, ptr %a, align 8
  %a3 = load double, ptr %a, align 8
  ret double %a3
}

define double @assign_add(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %add = fadd double %a1, %b2
  store double %add, ptr %a, align 8
  %a3 = load double, ptr %a, align 8
  ret double %a3
}

define double @assign_subtract(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %sub = fsub double %a1, %b2
  store double %sub, ptr %a, align 8
  %a3 = load double, ptr %a, align 8
  ret double %a3
}

define double @assign_multiply(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %mul = fmul double %a1, %b2
  store double %mul, ptr %a, align 8
  %a3 = load double, ptr %a, align 8
  ret double %a3
}

define double @assign_divide(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %div = fdiv double %a1, %b2
  store double %div, ptr %a, align 8
  %a3 = load double, ptr %a, align 8
  ret double %a3
}

define double @assign_remainder(double %0, double %1) {
body:
  %b = alloca double, align 8
  store double %1, ptr %b, align 8
  %a = alloca double, align 8
  store double %0, ptr %a, align 8
  %a1 = load double, ptr %a, align 8
  %b2 = load double, ptr %b, align 8
  %rem = frem double %a1, %b2
  store double %rem, ptr %a, align 8
  %a3 = load double, ptr %a, align 8
  ret double %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
