crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_i32.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: i32, b: i32) -> i32 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: i32, b: i32) -> i32 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: i32, b: i32) -> i32 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: i32, b: i32) -> i32 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: i32, b: i32) -> i32 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: i32, b: i32) -> i32 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i32 @assign(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  store i32 %b2, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

define i32 @assign_add(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %add = add i32 %a1, %b2
  store i32 %add, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

define i32 @assign_subtract(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %sub = sub i32 %a1, %b2
  store i32 %sub, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

define i32 @assign_multiply(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %mul = mul i32 %a1, %b2
  store i32 %mul, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

define i32 @assign_divide(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %div = sdiv i32 %a1, %b2
  store i32 %div, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

define i32 @assign_remainder(i32 %0, i32 %1) {
body:
  %b = alloca i32, align 4
  store i32 %1, ptr %b, align 4
  %a = alloca i32, align 4
  store i32 %0, ptr %a, align 4
  %a1 = load i32, ptr %a, align 4
  %b2 = load i32, ptr %b, align 4
  %rem = srem i32 %a1, %b2
  store i32 %rem, ptr %a, align 4
  %a3 = load i32, ptr %a, align 4
  ret i32 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
