crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_struct.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub struct(value) Value(i32, i32);\n    pub struct(gc) Heap(f64, f64);\n\n    pub fn assign_value(a: Value, b: Value) -> Value {\n        a = b;\n        a\n    }\n\n    pub fn assign_heap(a: Heap, b: Heap) -> Heap {\n        a = b;\n        a\n    }\n    // TODO: Add errors\n    // a += b;\n    // a *= b;\n    // a -= b;\n    // a /= b;\n    // a %= b;\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }
%Value = type { i32, i32 }

@allocatorHandle = external global ptr
@dispatchTable = external global %DispatchTable
@global_type_lookup_table = external global [4 x ptr]

define %Value @assign_value(%Value %0, %Value %1) {
body:
  %b = alloca %Value, align 8
  store %Value %1, ptr %b, align 4
  %a = alloca %Value, align 8
  store %Value %0, ptr %a, align 4
  %b1 = load %Value, ptr %b, align 4
  store %Value %b1, ptr %a, align 4
  %a2 = load %Value, ptr %a, align 4
  ret %Value %a2
}

define ptr @assign_value_wrapper(ptr %0, ptr %1) {
body:
  %"->data" = load ptr, ptr %0, align 8
  %deref = load %Value, ptr %"->data", align 4
  %"->data1" = load ptr, ptr %1, align 8
  %deref2 = load %Value, ptr %"->data1", align 4
  %assign_value = call %Value @assign_value(%Value %deref, %Value %deref2)
  %new_ptr = load ptr, ptr @dispatchTable, align 8
  %Value_ptr = load ptr, ptr getelementptr inbounds ([4 x ptr], ptr @global_type_lookup_table, i64 0, i64 1), align 8
  %allocator_handle = load ptr, ptr @allocatorHandle, align 8
  %ref = call ptr %new_ptr(ptr %Value_ptr, ptr %allocator_handle)
  %"ref->data" = load ptr, ptr %ref, align 8
  store %Value %assign_value, ptr %"ref->data", align 4
  ret ptr %ref
}

define ptr @assign_heap(ptr %0, ptr %1) {
body:
  %b = alloca ptr, align 8
  store ptr %1, ptr %b, align 8
  %a = alloca ptr, align 8
  store ptr %0, ptr %a, align 8
  %b1 = load ptr, ptr %b, align 8
  store ptr %b1, ptr %a, align 8
  %a2 = load ptr, ptr %a, align 8
  ret ptr %a2
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [4 x ptr] zeroinitializer
@allocatorHandle = unnamed_addr global ptr null
