crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_u16.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: u16, b: u16) -> u16 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: u16, b: u16) -> u16 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: u16, b: u16) -> u16 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: u16, b: u16) -> u16 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: u16, b: u16) -> u16 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: u16, b: u16) -> u16 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i16 @assign(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  store i16 %b2, ptr %a, align 2
  %a3 = load i16, ptr %a, align 2
  ret i16 %a3
}

define i16 @assign_add(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %add = add i16 %a1, %b2
  store i16 %add, ptr %a, align 2
  %a3 = load i16, ptr %a, align 2
  ret i16 %a3
}

define i16 @assign_subtract(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %sub = sub i16 %a1, %b2
  store i16 %sub, ptr %a, align 2
  %a3 = load i16, ptr %a, align 2
  ret i16 %a3
}

define i16 @assign_multiply(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %mul = mul i16 %a1, %b2
  store i16 %mul, ptr %a, align 2
  %a3 = load i16, ptr %a, align 2
  ret i16 %a3
}

define i16 @assign_divide(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %div = udiv i16 %a1, %b2
  store i16 %div, ptr %a, align 2
  %a3 = load i16, ptr %a, align 2
  ret i16 %a3
}

define i16 @assign_remainder(i16 %0, i16 %1) {
body:
  %b = alloca i16, align 2
  store i16 %1, ptr %b, align 2
  %a = alloca i16, align 2
  store i16 %0, ptr %a, align 2
  %a1 = load i16, ptr %a, align 2
  %b2 = load i16, ptr %b, align 2
  %rem = urem i16 %a1, %b2
  store i16 %rem, ptr %a, align 2
  %a3 = load i16, ptr %a, align 2
  ret i16 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
