crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_u64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: u64, b: u64) -> u64 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: u64, b: u64) -> u64 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: u64, b: u64) -> u64 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: u64, b: u64) -> u64 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: u64, b: u64) -> u64 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: u64, b: u64) -> u64 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @assign(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  store i64 %b2, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_add(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %add = add i64 %a1, %b2
  store i64 %add, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_subtract(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %sub = sub i64 %a1, %b2
  store i64 %sub, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_multiply(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %mul = mul i64 %a1, %b2
  store i64 %mul, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_divide(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %div = udiv i64 %a1, %b2
  store i64 %div, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

define i64 @assign_remainder(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %rem = urem i64 %a1, %b2
  store i64 %rem, ptr %a, align 4
  %a3 = load i64, ptr %a, align 4
  ret i64 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
