crates/mun_codegen/src/snapshots/mun_codegen__test__assignment_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign(a: u8, b: u8) -> u8 {\n        a = b;\n        a\n    }\n    pub fn assign_add(a: u8, b: u8) -> u8 {\n        a += b;\n        a\n    }\n    pub fn assign_subtract(a: u8, b: u8) -> u8 {\n        a -= b;\n        a\n    }\n    pub fn assign_multiply(a: u8, b: u8) -> u8 {\n        a *= b;\n        a\n    }\n    pub fn assign_divide(a: u8, b: u8) -> u8 {\n        a /= b;\n        a\n    }\n    pub fn assign_remainder(a: u8, b: u8) -> u8 {\n        a %= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i8 @assign(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  store i8 %b2, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

define i8 @assign_add(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %add = add i8 %a1, %b2
  store i8 %add, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

define i8 @assign_subtract(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %sub = sub i8 %a1, %b2
  store i8 %sub, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

define i8 @assign_multiply(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %mul = mul i8 %a1, %b2
  store i8 %mul, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

define i8 @assign_divide(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %div = udiv i8 %a1, %b2
  store i8 %div, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

define i8 @assign_remainder(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %rem = urem i8 %a1, %b2
  store i8 %rem, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
